show address in paragraph to prevent wrapping on mobile devices

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ h4 {
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-serif;
 }
 
+p {
+	margin: 0.3em 3pt;
+}
+
 table {
 	width: 100%;
 }
